sumo/tests/netconvert/import/XML/errors/broken_edge/edge#length__false1/errors.netconvert
Error: Attribute 'length' in definition of edge '1' is not a real number.
Quitting (on error).
